--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@ header #logo a {
             <span class="white">Software Engineer</span>  bringing 1 year of experience in software industry.
                      Want to succeed in an environment of growth and excellence and earn a job which provides me job
                     satisfaction and self-development and help me achieve personal as well as organizational goals.
-                <br/>I love programming because you can wake up everyday with a fresh and unique challenge on your to-do list! To top it off, you can make solution as much creative and elegant as you want. That feeling of distinction and satisfaction you get when you write a unique solution and elegant solution for a problem, i am lost for words to describe it but you would understand if you are a programmer!
+                <br/>The computer programming problems and challenges, constant learning, and satisfaction that come from programming 
+		make me love my job. 
+		Programming is fundamentally about creating  solutions to problems. At the end of the day, you have created something that didn’t exist that morning, and that is in and of itself satisfying.
+		I love programming because you can wake up everyday with a fresh and unique challenge on your to-do list! To top it off, you can make solution as much creative and elegant as you want. That feeling of distinction and satisfaction you get when you write a unique solution and elegant solution for a problem, i am lost for words to describe it but you would understand if you are a programmer!
             </p>
         </div>
     </div>
