--- a/index.html
+++ b/index.html
@@ -170,10 +170,14 @@ header #logo a {
             <span class="white">Software Engineer</span>  bringing 1 year of experience in software industry.
                      Want to succeed in an environment of growth and excellence and earn a job which provides me job
                     satisfaction and self-development and help me achieve personal as well as organizational goals.
-                <br/>  <br/>The computer programming problems and challenges, constant learning, and satisfaction that come from programming 
+                <br/>  <br/>
+		 <span class="white">The computer programming</span> problems and challenges, constant learning, and satisfaction that come from programming 
 		make me love my job. 
 		Because Programming is fundamentally about creating  solutions to problems. At the end of the day, 
 		you have created something that didn’t exist that morning, and that is in and of itself satisfying.
+ 		<br/>  <br/>
+		I really love tackling problems and <span class="white"> debugging code </span>,
+		especially figuring out problems with almost no information.
 		  </p>
         </div>
     </div>
