--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ header #logo a {
 		Because Programming is fundamentally about creating  solutions to problems. At the end of the day, 
 		you have created something that didn’t exist that morning, and that is in and of itself satisfying.
  		<br/>  <br/>
-		I really love tackling problems and <span class="white"> debugging code </span>,
+		I really love <span class="white">tackling problems</span> and <span class="white"> debugging code </span>,
 		especially figuring out problems with almost no information.
 		  </p>
         </div>
