--- a/index.html
+++ b/index.html
@@ -345,13 +345,13 @@ header #logo a {
                             <!-- Item Project and Filter Name -->
                             <li class="item-thumbs span3 web">
                                 <!-- Fancybox - Gallery Enabled - Title - Full Image -->
-                                <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Camden Construction" href="img/work/full/image-02-full.jpg">
+                                <a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Explore Globally" href="img/work/full/image-02-full.jpg">
                                     <span class="overlay-img"></span>
                                     <span class="overlay-img-thumb font-icon-plus"></span>
                                 </a>
                                 <!-- Thumb Image and Description -->
-                                <img src="img/work/thumbs/image-02.jpg" alt="Created business website for online presence. Users can search the services this company provides and contact through Contact Form.<br/><span class='white'>Libraries Used:</span> Bootstrap, Font Awesome, jQuery, jQuery UI<br/><a href='./portfolio/2/index.html' target='_blank'>Visit Website</a>">
-                                <h5 class="center">Camden Construction</h5>
+                                <img src="img/work/thumbs/image-02.jpg" alt="It is a video blogging website where users can post videos photos too, they can share their travelling experiences there. In return the top writers will get some benefits while travelling i.e discounts in ticketing<br/><span class='white'>Tools Used:</span> Wordpress, SQL<br/><a http://exploreglobally.com/' target='_blank'>Visit Website</a>">
+                                <h5 class="center">Explore Globally</h5>
                             </li>
                             <!-- End Item Project -->
                             
