--- a/index.html
+++ b/index.html
@@ -210,10 +210,9 @@ header #logo a {
 
             <div class="profile-grid center"><i class="fa fa-briefcase"></i></div>
             <h3 class="profile-name center">Experience</h3>
-            <h6 class="center">ASBOLOGIX </h6>
+            <h6 class="center">ABSTRON </h6>
             <p class="profile-description center">
                 Unity3D Game Developer<br/>
-                Active Time: 9 Months<br/>
   <!-- <a href="https://www.fiverr.com/users/ma_webminister/" target="_blank">Visit Profile</a> -->
             </p>
             
@@ -221,13 +220,11 @@ header #logo a {
             <h6 class="center">IT Waly – Chak Shehzad </h6>
             <p class="profile-description center">
                 Developer<br/>
-                Active Time: 5 Months<br/>
             </p>
 
             <h6 class="center">PTCL Headquarter – G/8 – Islamabad </h6>
             <p class="profile-description center">
                 Internee<br/>
-                Active Time: 2 Months<br/>
             </p>
         </div>
         <!-- End Profile -->
